--- a/app/entry-template.html
+++ b/app/entry-template.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="app-container"></div>
-    {% for (var chunk in o.htmlWebpackPlugin.assets) { %}<script src="{%=o.htmlWebpackPlugin.assets[chunk]%}"></script>{% } %}
+    {% for (var chunk in o.htmlWebpackPlugin.files) { %}<script src="{%=o.htmlWebpackPlugin.files[chunk]%}"></script>{% } %}
     <!-- {%= o.htmlWebpackPlugin.options.pkg.name + ' v' + o.htmlWebpackPlugin.options.pkg.version + ' built on ' + new Date() %} -->
   </body>
 </html>
