Successfully rendering a ui.router state

--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>{%= o.htmlWebpackPlugin.options.title || o.htmlWebpackPlugin.options.pkg.name || 'Webpack App'%}</title>
+    <title>TeamAttack</title>
 </head>
 <body>
 hello
-<div class="app-container"></div>
+<ui-view></ui-view>
 </body>
 </html>
